--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@mui/material": "^5.4.1",
     "@mui/styles": "^5.4.1",
     "axios": "^0.26.0",
+    "javascript-color-gradient": "^2.3.4",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-force-graph": "^1.41.12",
